Add vmware guest additions

--- a/tasks/discover-ip-vmware.yml
+++ b/tasks/discover-ip-vmware.yml
@@ -6,30 +6,22 @@
 # Discover Virtual Machine IP Address
 # -----------------------------------------------------------------------------
 #
-# AWS: In AWS the ec2_instance_facts module provides all DNS & IP address info,
-# both public and private.
-# If targeting the Public Address (the default) the DNS and IP address are available
-# at vm_data.instances[0]public_dns_name and vm_data.instances[0]public_ip_address
-#
-# Similarly if targeting a Private DNS/IP, these are available at
-# vm_data.instances[0]private_dns_name and vm_data.instances[0]private_ip_address
-#
 
-# Discover Public IP Address of VM
-- name: "[Cornerstone - AWS VM] Discover Public DNS/IP Address"
+# Discover IP Address of VM
+- name: "[Cornerstone - VMWARE VM] Discover DNS/IP Address"
   vmware_guest_facts_:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
+    hostname: "{{ cornerstone_vmware_hostname }}"
+    username: "{{ cornerstone_vmware_username }}"
+    password: "{{ cornerstone_vmware_password }}"
     validate_certs: no
-    datacenter: "{{ vcenter_datacenter }}"
-    folder: "{{ vcenter_folder }}"
-    name: "{{ vm_name }}"
+    datacenter: "{{ cornerstone_vmware_datacenter }}"
+    folder: "{{ cornerstone_vmware_vcsfolder }}"
+    name: "{{ cornerstone_vm_name }}"
   register: vm_data
   tags: ["{{ cornerstone_platform }}"]
 
 # Set DNS/IP Address as Fact
-- name: "[Cornerstone - AWS VM] Set DNS/IP Address"
+- name: "[Cornerstone - VMWARE VM] Set DNS/IP Address"
   set_fact:
       cornerstone_vm_ipaddress: "{{ vm_data.ipv4 }}"
   tags: ["{{ cornerstone_platform }}"]
@@ -37,8 +29,6 @@
 - name: "[Cornerstone - VM] Display DNS/IP Address"
   debug:
     msg: "Cornerstone VM IP Address: {{ cornerstone_vm_ipaddress }}"
-  when:
-    - vm_data.instances
 
 - name: "[Cornerstone - VM] Register IP with Temporary Host Group"
   add_host:
@@ -47,8 +37,6 @@
     ansible_ssh_user: "{{ cornerstone_ssh_user }}"
     ansible_ssh_private_key_file: "{{ cornerstone_ssh_key_path }}"
     ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
-  when:
-    - vm_data.instances
 
 - name: "[Cornerstone - VM] Register IP with Temporary Host Group named after the Purpose tag"
   add_host:
@@ -58,7 +46,6 @@
     ansible_ssh_private_key_file: "{{ cornerstone_ssh_key_path }}"
     ansible_ssh_extra_args: "{{ cornerstone_ssh_extra_args }}"
   when:   
-    - vm_data.instances
     - cornerstone_tag_purpose != ""
 
 - name: "[Cornerstone - VM] Register IP with Temporary Host Group named after the Role tag"
@@ -69,5 +56,4 @@
     ansible_ssh_private_key_file: "{{ cornerstone_ssh_key_path }}"
     ansible_ssh_extra_args: "{{ cornerstone_ssh_extra_args }}"
   when:
-    - vm_data.instances
     - cornerstone_tag_role != ""
