--- a/tasks/vm-vmware.yml
+++ b/tasks/vm-vmware.yml
@@ -10,10 +10,10 @@
 # Check if we have an existing VM with this name.
 - name: "[Cornerstone - VMWARE] Check for Existing VM"
   vmware_guest_facts:
+    validate_certs: "{{ cornerstone_vmware_validate_certs }}"
     hostname: "{{ cornerstone_vmware_hostname }}"
     username: "{{ cornerstone_vmware_username }}"
     password: "{{ cornerstone_vmware_password }}"
-    validate_certs: no
     datacenter: "{{ cornerstone_vmware_datacenter }}"
     folder: "{{ cornerstone_vmware_vcsfolder }}"
     name: "{{ cornerstone_vm_name }}"
@@ -34,6 +34,7 @@
 # Create the VM (baseline no data disks)
 - name: "[Cornerstone - VMWARE] Create/Delete VM - {{ cornerstone_vm_name }}"
   vmware_guest:
+    validate_certs: "{{ cornerstone_vmware_validate_certs }}"
     hostname: "{{ cornerstone_vmware_hostname }}"
     username: "{{ cornerstone_vmware_username }}"
     password: "{{ cornerstone_vmware_password }}"
