--- a/meta/main.yml
+++ b/meta/main.yml
@@ -63,6 +63,7 @@ galaxy_info:
     - aws
     - azure
     - system
+    - vmware
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
